Adaptando UsuarioDetail para utilizar as permissoes do usuario;